--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ description: >-                        # used by seo meta and the atom feed
   읽거나, 보거나, 듣거나, 쓰거나
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://yeonseo.github.io'
+url: 'https://ksm0207.github.io'
 
 author: yan_bug                  # change to your full name
 
 github:
-  username: yeonseo             # change to your github username
+  username: ksm0207             # change to your github username
 
 twitter:
   username:            # change to your twitter username
